adding initial work on makefiles

--- a/searchengine/Makefile
+++ b/searchengine/Makefile
@@ -9,13 +9,13 @@ QUICKPACKAGE=${PROG}-${VERSION}.zip
 
 QMAKEFILE=${PROG}.makefile
 QMAKEPRO=${PROG}.pro
+QMAKETESTSPRI=tests/tests.pri
 
 # dev build opts
 QMAKEFILE_OPTS+="TARGET=${PROG}"
 QMAKEFILE_OPTS+="OBJECTS_DIR=./.objs"
 QMAKEFILE_OPTS+="MOC_DIR=./.mocs"
 QMAKEFILE_OPTS+="CONFIG += debug"
-QMAKEFILE_OPTS+="DEFINES += BOOL=bool"
 QMAKEFILE_OPTS+="INCLUDEPATH += ${INCLUDEPATH}"
 QMAKEFILE_OPTS+="QMAKE_CXXFLAGS_WARN_ON=-w"
 QMAKEFILE_OPTS+="QMAKE_CFLAGS_WARN_ON=-w"
@@ -23,7 +23,7 @@ QMAKEFILE_OPTS+="QT -= network"
 QMAKEFILE_OPTS+="QT -= sql"
 QMAKEFILE_OPTS+="QT -= gui"
 QMAKEFILE_OPTS+="QT -= xml"
-#QMAKEFILE_OPTS+="DEFINES += WARN_LOG=1"
+QMAKEFILE_OPTS+="QT += core"
 
 QMAKEPRO_OPTS+= -t app
 QMAKEPRO_OPTS+= -nopwd
@@ -45,8 +45,13 @@ ${PROG}: ${QMAKEFILE}
 ${PROG}-release: ${PROG}
 	strip --strip-unneeded ${PROG} -o $@
 
+${QMAKETESTSPRI}:
+	echo >> $@ "CONFIG += qtestlib"
+	echo >> $@ "SRCS=*.cpp"
+
 ${QMAKEFILE}: ${QMAKEPRO}
 	${QMAKE} -makefile ${QMAKEFILE_OPTS} -o $@ $<
+	echo >> $@ "include(${QMAKETESTSPRI})"
 
 ${QMAKEPRO}: Makefile
 	${QMAKE} -project ${QMAKEPRO_OPTS} -o $@ $<
