improvements simple ones on graph

--- a/searchengine/Makefile
+++ b/searchengine/Makefile
@@ -12,7 +12,7 @@ QMAKEPRO=${PROG}.pro
 QMAKEFILE_OPTS+="TARGET=${PROG}"
 QMAKEFILE_OPTS+="OBJECTS_DIR=./.objs"
 QMAKEFILE_OPTS+="MOC_DIR=./.mocs"
-#QMAKEFILE_OPTS+="CONFIG += debug"
+QMAKEFILE_OPTS+="CONFIG += debug"
 QMAKEFILE_OPTS+="INCLUDEPATH += ${INCLUDEPATH}"
 QMAKEFILE_OPTS+="QT += network"
 QMAKEFILE_OPTS+="QT -= sql"
