--- a/searchengine/Makefile
+++ b/searchengine/Makefile
@@ -16,9 +16,8 @@ QMAKEFILE_OPTS+="CONFIG += debug"
 QMAKEFILE_OPTS+="INCLUDEPATH += ${INCLUDEPATH}"
 QMAKEFILE_OPTS+="QT += network"
 QMAKEFILE_OPTS+="QT -= sql"
-QMAKEFILE_OPTS+="QT -= gui"
-QMAKEFILE_OPTS+="QT -= xml"
-QMAKEFILE_OPTS+="QT += core"
+QMAKEFILE_OPTS+="QT += gui"
+QMAKEFILE_OPTS+="QT += webkit"
 
 QMAKEPRO_OPTS+= -t app
 QMAKEPRO_OPTS+= -nopwd
