--- a/searchengine/tests/Makefile
+++ b/searchengine/tests/Makefile
@@ -1,22 +1,7 @@
-# qt config
-QTDIR?=/usr
-QMAKE=${QTDIR}/bin/qmake
-GMAKE=/usr/bin/make
-
 TESTCASES=
 TESTCASES+=test_computeranks
 TESTCASES+=test_crawler
 TESTCASES+=test_search
-
-QMAKEFILE_OPTS= 
-QMAKEPRO_OPTS+=	"-nopwd"
-QMAKEPRO_OPTS+=	"-norecursive"
-QMAKEPRO_OPTS+=	"CONFIG += qtestlib" 
-QMAKEPRO_OPTS+=	"OBJECTS_DIR = ${.CURDIR}/../.objs"
-QMAKEPRO_OPTS+=	"MOC_DIR = ${.CURDIR}/../.mocs"
-QMAKEPRO_OPTS+=	"QT -= sql"
-QMAKEPRO_OPTS+=	"QT -= gui"
-QMAKEPRO_OPTS+=	"QT += network"
 
 .MAIN: build
 build: ${TESTCASES} .PHONY
@@ -49,8 +34,9 @@ clean distclean: .PHONY
 			rm -v ${_mk}.pro
 .		endif
 .	endif
-.endfor	# {
+.endfor	# }
 
-.include <bsd.prog.mk>
+.include "../Makefile.inc"
+.include "bsd.qt.mk"
 
 # vim: set tw=78:
