moving qmakeopts from .inc do individual makefiles, adjusting subdir

--- a/searchengine/Makefile
+++ b/searchengine/Makefile
@@ -6,19 +6,16 @@ VERSION=0.1
 QSRCS= crawler.cpp graph.cpp main.cpp search.cpp webbrowser.cpp
 QHDRS= crawler.h crawlercache.h graph.h index.h search.h webbrowser.h
 
-QMAKEOPTS.debug=	yes
-
-QMAKEOPTS.qt+=	webkit
-QMAKEOPTS.qt+=	gui
-QMAKEOPTS.qt+=	network
+QMAKEOPTS.debug=	no
+QMAKEOPTS.qt+=		webkit
+QMAKEOPTS.qt+=		gui
 
 tests: .PHONY
-	cd tests && ${MAKE} build
-	cd tests && ${MAKE} run
+	cd tests && ${.MAKE} buildall run
 
 .include "bsd.qt.mk"
 
-SUBDIR= tests
+SUBDIR+= tests
 .include <bsd.subdir.mk>
 
 # vim: set tw=78:
